fix(ui): prevent vertical stretching of switch

--- a/web_src/css/modules/switch.css
+++ b/web_src/css/modules/switch.css
@@ -1,7 +1,9 @@
 .switch {
   display: grid;
   grid-auto-flow: column;
+  height: fit-content;
   align-items: center;
+  align-self: center;
   background: var(--color-menu);
   border: 1px solid var(--color-input-border);
   border-radius: var(--border-radius);
